--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -595,6 +595,7 @@
 	.container {
 	  &:first-child {
 		table {
+
 		  tr {
 			&:first-child {
 			  th {
@@ -619,6 +620,83 @@
 				  border: 1px solid transparent;
 				  border-image: linear-gradient(to right, transparent 0%, rgba(limegreen, .3) 50%, transparent 100%);
 				  border-image-slice: 1;
+				}
+			  }
+			}
+
+		  }
+
+		  tbody {
+			tr {
+			  th,
+			  td {
+				&:nth-child(2) {
+				  background: rgba($color-negative, .2);
+				}
+
+				&:nth-child(3),
+				&:nth-child(8) {
+				  background: rgba($color-killed, .1);
+				}
+
+				&:nth-child(4),
+				&:nth-child(9) {
+				  background: rgba($color-emp, .1);
+				}
+
+				&:nth-child(5) {
+				  border-right: 4px solid $color-background;
+				}
+
+				&:nth-child(5),
+				&:nth-child(10) {
+				  background: rgba($color-stolen, .1);
+				}
+
+				&:nth-child(7) {
+				  background: rgba($color-positive, .23);
+				}
+			  }
+			}
+		  }
+		}
+	  }
+
+	  &:nth-child(2) {
+		table {
+		  thead {
+			th {
+			  position: relative;
+
+			  &:nth-child(2),
+			  &:nth-child(3),
+			  &:nth-child(4) {
+
+				&:after {
+				  width: 1rem;
+				  height: 1rem;
+				  margin-left: .4rem;
+				  content: "";
+				  display: inline-block;
+				  vertical-align: sub;
+				}
+			  }
+
+			  &:nth-child(2) {
+				&:after {
+				  background: url(/images/template53/metal_16.png) no-repeat center, $color-bg-th;
+				}
+			  }
+
+			  &:nth-child(3) {
+				&:after {
+				  background: url(/images/template53/crystal_16.png) no-repeat center, $color-bg-th;
+				}
+			  }
+
+			  &:nth-child(4) {
+				&:after {
+				  background: url(/images/template53/eonium_16.png) no-repeat center, $color-bg-th;
 				}
 			  }
 			}
@@ -667,7 +745,6 @@
 			  top: -0.14rem;
 			}
 		  }
-
 		}
 
 		&.relations_neutral {
@@ -737,6 +814,38 @@
 			}
 		  }
 		}
+
+		//&:not(:nth-last-child(3)):not(:nth-last-child(2)) {
+		//  th,
+		//  td {
+		//	&:nth-child(2) {
+		//	  background: rgba($color-negative, .2);
+		//	}
+		//
+		//	&:nth-child(3),
+		//	&:nth-child(7) {
+		//	  background: rgba($color-killed, .1);
+		//	}
+		//
+		//	&:nth-child(4),
+		//	&:nth-child(8) {
+		//	  background: rgba($color-emp, .1);
+		//	}
+		//
+		//	&:nth-child(5) {
+		//	  border-right: 4px solid $color-background;
+		//	}
+		//
+		//	&:nth-child(5),
+		//	&:nth-child(9) {
+		//	  background: rgba($color-stolen, .1);
+		//	}
+		//
+		//	&:nth-child(6) {
+		//	  background: rgba($color-positive, .23);
+		//	}
+		//  }
+		//}
 	  }
 	}
   }
