css universe tables

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -149,7 +149,7 @@
 		}
 
 		&:after {
-		  content: "contact @UltimateNewbie \A on TG for help/bugs";
+		  content: "contact @UltimateNewbie \A on TG for assistance / bugs";
 		  position: absolute;
 		  white-space: pre-wrap;
 		  bottom: -5.75rem;
