--- a/scss/components/_tables.scss
+++ b/scss/components/_tables.scss
@@ -53,7 +53,8 @@ form[name="gal_fund_trade"] + p + p +,
 #page_history #tab5 .container:last-child,
 #page_history #tab6,
 #page_history #tab7,
-#page_history #tab8 {
+#page_history #tab8,
+[id^="page_universe"] .maintext > {
   table {
 	border: 1px solid transparent;
 	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
@@ -80,4 +81,13 @@ form[action^="mining.pl?"] {
   border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
   box-shadow: inset 0 0 8px 2px rgba(black, .25), 0 2px 10px 2px rgba(black, .15);
+}
+
+[id^="page_universe"] #javascriptwarning + .container .maintext >,
+[id^="page_universe"] #javascriptwarning + #notice + .container .maintext >,
+#page_universe_races .container:nth-last-child(3) {
+  table {
+	border: 1px transparent;
+	box-shadow: none;
+  }
 }
