--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -75,13 +75,6 @@
 			  }
 			}
 
-			td {
-			  &[colspan="6"],
-			  &[colspan="8"] {
-				background: $color-background;
-			  }
-			}
-
 			&:nth-child(odd) {
 			  background-color: $color-secondary-alt;
 
@@ -89,10 +82,6 @@
 				background-color: $color-secondary-alt;
 			  }
 			}
-
-			//&:first-child {
-			//  background: transparent;
-			//}
 		  }
 		}
 	  }
@@ -341,16 +330,9 @@
   background: rgba($color-own, .25) !important;
 }
 
-#page_universe_launches,
-#page_universe_covert_ops,
-#page_universe_misc,
-#page_universe_races,
-#page_universe_xp,
-#page_universe_politics,
-#page_universe_feed {
+[id^="page_universe"] {
   table {
 	width: auto;
-	min-width: 700px;
 
 	tr {
 	  &:first-child {
@@ -360,6 +342,7 @@
 		  color: #ccc;
 		  font-size: $text-small;
 		  padding: .25rem .5rem;
+		  width: auto !important;
 
 		  &:empty {
 			background: transparent !important;
@@ -506,7 +489,7 @@
 	tr {
 	  td {
 		&[style="width: 30%;"] {
-		  width: 5% !important;
+		  width: .25rem !important;
 		}
 	  }
 	}
@@ -845,11 +828,15 @@
 		}
 	  }
 	}
+
+	.header,
+	h2 {
+	  margin-bottom: 2rem;
+	}
   }
 
   table {
 	width: auto !important;
-	min-width: 450px;
 	margin-bottom: 2.5rem;
 
 	th,
@@ -858,6 +845,20 @@
 
 	  &:empty {
 		background: transparent;
+		width: 0 !important;
+		padding: 0 !important;
+	  }
+	}
+
+	td {
+	  &[colspan="4"],
+	  &[colspan="5"],
+	  &[colspan="6"],
+	  &[colspan="7"],
+	  &[colspan="8"] {
+		background: $color-background;
+		height: .75rem;
+		font-size: 0;
 	  }
 	}
   }
