--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -82,7 +82,7 @@
 	  }
 
 	  &.notice_warning {
-		color: rgba($color-neutral, .75);
+		color: rgba($color-negative, .75);
 		font-size: $text-small;
 		background: transparent;
 		text-align: center;
