--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -117,7 +117,7 @@ ul.alliance_attack_claims_list a,
   cursor: pointer;
   border-radius: 3px;
   text-transform: initial;
-  font-weight: initial;
+  font-weight: bold;
   font-family: inherit;
   font-size: 1rem;
   white-space: nowrap;
