--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -100,12 +100,38 @@
 			  font-size: 0;
 
 			  &:after {
-				padding: 2px 4px;
-				border-radius: 4px;
-				font-size: .6875rem;
-				background: #2d72bb;
-				color: white;
 				content: "BATTLE CALC";
+				display: inline-block;
+				padding: .25rem .5rem;
+				color: $color-primary !important;
+				background: rgba($color-secondary, .4) !important;
+				border: 1px solid rgba($color-primary, .5) !important;
+				box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+				cursor: pointer;
+				border-radius: 3px;
+				text-transform: initial;
+				font-weight: initial;
+				font-family: inherit;
+				font-size: $text-small;
+				line-height: 1;
+				white-space: nowrap;
+				transition-property: color, background, box-shadow;
+				transition-duration: .75s;
+				transition-timing-function: linear;
+
+				&::-moz-focus-inner {
+				  padding: 0;
+				  border: 0;
+				}
+			  }
+
+			  &:hover {
+				&:after {
+				  text-decoration: none !important;
+				  color: black !important;
+				  background: $color-primary !important;
+				  box-shadow: none;
+				}
 			  }
 			}
 		  }
