--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -110,7 +110,7 @@
 				cursor: pointer;
 				border-radius: 3px;
 				text-transform: initial;
-				font-weight: initial;
+				font-weight: bold;
 				font-family: inherit;
 				font-size: $text-small;
 				line-height: 1;
