--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -195,6 +195,9 @@ span.center {
   white-space: initial;
   box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .4);
 }
+#side_select_box {
+  width: auto !important;
+}
 
 #pabox_inner {
   top: 0 !important;
