--- a/scss/styles_monkey.scss
+++ b/scss/styles_monkey.scss
@@ -1,3 +1,12 @@
+/*! ==UserStyle==
+@name        Ultimate PA skin
+@namespace   FreshLondon
+@version     2.2.8
+@homepageURL https://github.com/FreshLondon/PA-dark
+@updateURL   https://raw.githubusercontent.com/FreshLondon/PA-dark/master/dist/styles.css
+@license     GNU GPLv3
+@author      FreshLondon
+==/UserStyle== */
 /*!
 *  v2.2.8
 *  This skin addon is designed to run with the r32 skin selected in PA preferences.
