--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -105,7 +105,9 @@ ul.alliance_attack_claims_list a,
 #page_alliance_attacks .container#javascriptwarning + #notice + .container + .container table tr a,
 #page_alliance_attacks .container#javascriptwarning + #notice + .container + .container + .container table tr:not([class]):not([id]) a,
 #page_alliance_fleets #contents table tr td[style="width: 20%;"] a,
-#page_alliance_defence #dships_box p#dbcalc a {
+#page_alliance_defence #dships_box p#dbcalc a,
+#page_scan .maintext a,
+#side_select_box p:not(:first-child) a {
   display: inline-block;
   height: 1.5rem;
   margin: 1rem 0;
@@ -117,7 +119,7 @@ ul.alliance_attack_claims_list a,
   cursor: pointer;
   border-radius: 3px;
   text-transform: initial;
-  font-weight: bold;
+  font-weight: initial;
   font-family: inherit;
   font-size: 1rem;
   white-space: nowrap;
@@ -131,6 +133,15 @@ ul.alliance_attack_claims_list a,
 	background: $color-primary !important;
 	box-shadow: none;
   }
+}
+
+#page_scan .maintext a,
+#side_select_box p:not(:first-child) a {
+  margin: 0;
+}
+
+#page_scan .maintext a[href^="showscan"] {
+  margin-bottom: 1rem;
 }
 
 ul.alliance_attack_claims_list a {
