--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -303,12 +303,14 @@ div[id^="page_universe_"] {
   background: $color-background;
   border: 1px solid rgba($color-primary, .5);
   color: $color-offwhite !important;
-  padding: .25rem .5rem;
+  padding: .25rem;
 
   * {
 	color: $color-offwhite !important;
-	text-align: right;
 	height: 0;
+  }
+  *:not([colspan="2"]){
+	text-align: right;
   }
 }
 
