--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -187,6 +187,7 @@ span.center {
 #fleet_select_box,
 #side_select_box,
 #con_fleets,
+#con_planets,
 #dships_box {
   background: $color-background !important;
   color: $color-offwhite !important;
