--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -42,6 +42,9 @@
 			  padding: .25rem .75rem;
 
 			  &:first-child {
+				&:not([colspan="2"]):not(:nth-last-child(3)) {
+				  text-align: right;
+				}
 
 				a {
 				  padding-right: .5rem;
@@ -54,6 +57,7 @@
 				  padding: 0 .125rem;
 				  width: 35px;
 				  text-align: center;
+				  display: inline-block;
 				}
 			  }
 			}
