--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -117,6 +117,7 @@
 	margin-top: 2rem;
 	font-size: 0;
 	color: rgba($color-primary, .55);
+	padding-bottom: 8rem;
 
 	span {
 	  &#time {
@@ -135,7 +136,7 @@
 		position: relative;
 
 		&:before {
-		  content: "Ultimate skin v2.2.10";
+		  content: "Ultimate skin v2.2.11";
 		  position: absolute;
 		  bottom: -3.75rem;
 		  font-size: $text-large;
