--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -9,8 +9,11 @@
 			  background: rgba($color-primary, .1) !important;
 
 			  table {
-
 				tr {
+				  th {
+					background: $color-background;
+				  }
+
 				  &:nth-child(even) {
 					td {
 					  background: $color-secondary;
@@ -34,7 +37,7 @@
 		  }
 
 		  &:first-child {
-			th {
+			> th {
 			  padding: .5rem .125rem;
 			}
 		  }
@@ -65,6 +68,15 @@
 			margin: 0 auto 1rem;
 
 			tr {
+			  th {
+				background: $color-background;
+			  }
+
+			  td {
+				&:first-child {
+				  text-align: right;
+				}
+			  }
 
 			  &:nth-child(even) {
 				background: $color-secondary;
@@ -76,6 +88,25 @@
 
 			  &:first-child {
 				background: transparent;
+			  }
+
+			  &:nth-child(3),
+			  &:nth-child(4) {
+				th {
+				  &:first-child {
+					text-align: right;
+				  }
+				}
+			  }
+
+			  &:nth-child(2) {
+				th {
+				  text-align: center;
+				}
+			  }
+
+			  &:hover {
+				background: rgba($color-primary, .2) !important;
 			  }
 			}
 
@@ -160,17 +191,17 @@
 					th,
 					td {
 					  &:nth-child(2) {
-						background: rgba($color-negative, .2);
+						background: rgba($color-negative, .1);
 					  }
 
 					  &:nth-child(3),
 					  &:nth-child(7) {
-						background: rgba($color-killed, .1);
+						background: rgba($color-killed, .075);
 					  }
 
 					  &:nth-child(4),
 					  &:nth-child(8) {
-						background: rgba($color-emp, .1);
+						background: rgba($color-emp, .075);
 					  }
 
 					  &:nth-child(5) {
@@ -179,11 +210,11 @@
 
 					  &:nth-child(5),
 					  &:nth-child(9) {
-						background: rgba($color-stolen, .1);
+						background: rgba($color-stolen, .075);
 					  }
 
 					  &:nth-child(6) {
-						background: rgba($color-positive, .23);
+						background: rgba($color-positive, .1);
 					  }
 					}
 				  }
