--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -117,6 +117,9 @@
 
 		  &.news_fleet {
 			table {
+			  width: auto !important;
+			  margin: 0 0 1rem !important;
+
 			  &:first-child {
 				tr {
 				  &:first-child {
@@ -138,6 +141,8 @@
 			  }
 
 			  &:last-child {
+				margin-bottom: 0 !important;
+
 				th {
 				  position: relative;
 
