--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -118,6 +118,7 @@
 		  &.news_fleet {
 			table {
 			  width: auto !important;
+			  min-width: 70%;
 			  margin: 0 0 1rem !important;
 
 			  &:first-child {
