--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -47,15 +47,16 @@
 				}
 
 				a {
-				  padding-right: .5rem;
-				  width: 45px;
+				  margin-right: .5rem;
+				  text-align: center;
+				  width: 4rem;
 				}
 
 				span {
 				  font-size: 1rem;
 				  text-transform: uppercase;
 				  padding: 0 .125rem;
-				  width: 35px;
+				  width: 2.5rem;
 				  text-align: center;
 				  display: inline-block;
 				}
