--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -770,15 +770,14 @@
 			  }
 
 			  a {
-				padding-right: .5rem;
-				width: 45px;
+				margin-right: .5rem;
 			  }
 
 			  span {
 				font-size: 1rem;
 				text-transform: uppercase;
 				padding: 0 .125rem;
-				width: 35px;
+				width: 2.5rem;
 				text-align: center;
 				display: inline-block;
 			  }
