--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -273,23 +273,23 @@
 						}
 					  }
 
-					  &:nth-child(2) {
-						&:after {
-						  background: url(/images/template53/metal_16.png) no-repeat center, $color-bg-th;
-						}
-					  }
-
-					  &:nth-child(3) {
-						&:after {
-						  background: url(/images/template53/crystal_16.png) no-repeat center, $color-bg-th;
-						}
-					  }
-
-					  &:nth-child(4) {
-						&:after {
-						  background: url(/images/template53/eonium_16.png) no-repeat center, $color-bg-th;
-						}
-					  }
+					  //&:nth-child(2) {
+						//&:after {
+						//  background: url(/images/template53/metal_16.png) no-repeat center, $color-bg-th;
+						//}
+					  //}
+					  //
+					  //&:nth-child(3) {
+						//&:after {
+						//  background: url(/images/template53/crystal_16.png) no-repeat center, $color-bg-th;
+						//}
+					  //}
+					  //
+					  //&:nth-child(4) {
+						//&:after {
+						//  background: url(/images/template53/eonium_16.png) no-repeat center, $color-bg-th;
+						//}
+					  //}
 					}
 				  }
 				}
