--- a/scss/styles_complete.scss
+++ b/scss/styles_complete.scss
@@ -1,6 +1,5 @@
 /*!
-*  v2.2.15
-*  This skin addon is designed to run with the r32 skin selected in PA preferences.
+*  v3.1
 *
 *  If this skin customisation adds even a tiny bit of enjoyment to your gaming experience it was well worth the countless hours of development.
 *  Made with love, for my fellow spreadsheet warriors.
@@ -8,25 +7,6 @@
 *
 *  For any questions / bug reports / assistance, contact @UltimateNewbie on TG.
 *  Thanks to Leshy for the original inspiration and CSS grid layout, forever grateful!
-*
-*
-*  Here's some tips:
-*
-*  INSTALL INSTRUCTIONS:
-*  You'll need to enable the 'Round 32' as the base skin in preferences, and a browser extension to add the new CSS to the PA pages:
-*  Chrome or other chromium based browsers (Brave, Opera, Yandex beta, etc.. pretty much any non-FireFox browser): (https://chrome.google.com/webstore/detail/user-javascript-and-css/nbhcbdghjpllgmfilhnhkllmkecfmpld)
-*  FireFox: (https://addons.mozilla.org/en-GB/firefox/addon/custom-style-script/)
-*
-*  This Dark skin CSS can always be refreshed for new updates etc it's found here:
-*  https://raw.githubusercontent.com/FreshLondon/PA-dark/master/dist/styles.css
-*
-*  MOBILE USE:
-*  Any chromium based browser (yandex beta, brave, opera, etc) or FireFox (probably use this as that annoying PA calc import bug isn't present) supports addons, use the chrome extension above for any non-Firefox browser.
-*  Note: iOS disabled support for firefox extensions, I'd recommend Yandex Beta if on iOS.
-*
-*  IF IT'S FUCKED:
-*  Make sure you are not viewing mobile in SIMPLE view or it will look really shit.
-*  Hit the 'view pages in full version' button (change this at the bottom left of the side menu).
 *
 *  Have fun / enjoy / leave suggestions and feedback - let's make this awesome together!
 *
@@ -40,7 +20,7 @@
 @import "lib/variables";
 //
 // start the actual styles here:
-//@import "components/base_32";
+@import "components/base_32";
 @import "components/global";
 @import "components/top_bar";
 @import "components/menu";
@@ -79,8 +59,3 @@
 @import "components/tables";
 //
 @import "lib/animations";
-
-/*!
-*
-*  P.S. If you can see this and the message at the start then you successfully copied and pasted the entire file, epic.
-*/
