--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -147,43 +147,43 @@
 				th {
 				  position: relative;
 
-				  &:nth-child(2),
-				  &:nth-child(3),
-				  &:nth-child(4) {
-					font-size: $text-default;
-					line-height: 1;
-					text-align: center;
-					padding: .25rem .5rem;
-					font-weight: normal;
-					background: $color-secondary-alt;
+				  //&:nth-child(2),
+				  //&:nth-child(3),
+				  //&:nth-child(4) {
+					//font-size: $text-default;
+					//line-height: 1;
+					//text-align: center;
+					//padding: .25rem .5rem;
+					//font-weight: normal;
+					//background: $color-secondary-alt;
+				  //
+					////&:after {
+					////  width: 1rem;
+					////  height: 1rem;
+					////  margin-left: .4rem;
+					////  content: "";
+					////  display: inline-block;
+					////  vertical-align: sub;
+					////}
+				  //}
 
-					&:after {
-					  width: 1rem;
-					  height: 1rem;
-					  margin-left: .4rem;
-					  content: "";
-					  display: inline-block;
-					  vertical-align: sub;
-					}
-				  }
-
-				  &:nth-child(2) {
-					&:after {
-					  background: url(/images/template53/metal_16.png) no-repeat center, $color-bg-th;
-					}
-				  }
-
-				  &:nth-child(3) {
-					&:after {
-					  background: url(/images/template53/crystal_16.png) no-repeat center, $color-bg-th;
-					}
-				  }
-
-				  &:nth-child(4) {
-					&:after {
-					  background: url(/images/template53/eonium_16.png) no-repeat center, $color-bg-th;
-					}
-				  }
+				  //&:nth-child(2) {
+					//&:after {
+					//  background: url(/images/template53/metal_16.png) no-repeat center, $color-bg-th;
+					//}
+				  //}
+				  //
+				  //&:nth-child(3) {
+					//&:after {
+					//  background: url(/images/template53/crystal_16.png) no-repeat center, $color-bg-th;
+					//}
+				  //}
+				  //
+				  //&:nth-child(4) {
+					//&:after {
+					//  background: url(/images/template53/eonium_16.png) no-repeat center, $color-bg-th;
+					//}
+				  //}
 				}
 			  }
 			}
