--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -36,6 +36,7 @@ $color-own: rgb(0, 130, 255);
 $color-positive: limegreen;
 $color-neutral: orange;
 $color-negative: red;
+$color-broken: #ff4113;
 //
 $color-killed: #f44;
 $color-emp: #41c9ff;
