--- a/scss/components/_base_32.scss
+++ b/scss/components/_base_32.scss
@@ -5,7 +5,7 @@ html, body, .pages {
 }
 
 body {
-  background: url('stars.jpg') #000;
+  background: url('/images/template53/stars.jpg') #000;
   font-family: Arial, Helvetica, sans-serif;
   color: #ccc;
 }
@@ -15,7 +15,7 @@ body, p, td {
 }
 
 .pages {
-  background: url('background2.jpg') no-repeat top center;
+  background: url('/images/template53/background2.jpg') no-repeat top center;
   width: 1072px;
   margin: 0 auto;
 }
@@ -24,7 +24,7 @@ body, p, td {
   color: #fff;
   width: 1072px;
   height: 434px;
-  background: url('planet_footer2.png') no-repeat bottom center;
+  background: url('/images/template53/planet_footer2.png') no-repeat bottom center;
   font-size: 10px;
   margin: -376px auto 0 auto;
   text-align: center;
@@ -90,7 +90,7 @@ p {
   display: block;
   height: 87px;
   width: 338px;
-  background: url('planetarion-icon.png') top left no-repeat;
+  background: url('/images/template53/planetarion-icon.png') top left no-repeat;
   margin-bottom: 10px;
 }
 
@@ -98,7 +98,7 @@ p {
   width: 1070px;
   padding-top: 13px;
   height: 38px;
-  background: url('top-menu.png');
+  background: url('/images/template53/top-menu.png');
   margin: 0 auto;
   text-align: center;
 }
@@ -125,7 +125,7 @@ p {
 
 #bar_forums {
   width: 87px;
-  background: url('forums.png');
+  background: url('/images/template53/forums.png');
 }
 
 #bar_forums span, #bar_manual span, #bar_logout span, #bar_support span, #bar_portal span {
@@ -134,22 +134,22 @@ p {
 
 #bar_manual {
   width: 87px;
-  background: url('manual.png');
+  background: url('/images/template53/manual.png');
 }
 
 #bar_logout {
   width: 86px;
-  background: url('logout.png');
+  background: url('/images/template53/logout.png');
 }
 
 #bar_support {
   width: 97px;
-  background: url('support.png');
+  background: url('/images/template53/support.png');
 }
 
 #bar_portal {
   width: 83px;
-  background: url('portal.png');
+  background: url('/images/template53/portal.png');
 }
 
 input, .input, textarea, select, .checkbox {
@@ -380,13 +380,13 @@ ul, li {
 }
 
 #menu_top {
-  background: url('left-menu-top.png');
+  background: url('/images/template53/left-menu-top.png');
   width: 146px;
   height: 26px;
 }
 
 #menu_bottom {
-  background: url('left-menu-bottom.png');
+  background: url('/images/template53/left-menu-bottom.png');
   width: 146px;
   height: 26px;
   margin-bottom: 10px;
@@ -402,7 +402,7 @@ ul, li {
 
 .menu_grp, #menu_overview, #menu_preferences, #menu_logout {
   padding-bottom: 10px;
-  background: url('menu-left-middle.png') repeat-y;
+  background: url('/images/template53/menu-left-middle.png') repeat-y;
   width: 146px;
 }
 
@@ -450,11 +450,11 @@ ul, li {
 #contents_header {
   width: 750px;
   height: 12px;
-  background: url('center_top.png');
+  background: url('/images/template53/center_top.png');
 }
 
 #contents_footer {
-  background: url('center_bottom.png');
+  background: url('/images/template53/center_bottom.png');
   width: 750px;
   height: 15px;
   margin-bottom: 25px;
@@ -462,7 +462,7 @@ ul, li {
 
 #contents_information {
   width: 730px;
-  background: url('center_middle.png');
+  background: url('/images/template53/center_middle.png');
   padding: 0 10px;
   text-align: right;
 }
@@ -472,21 +472,21 @@ ul, li {
 }
 
 #mining td .metal, #galaxy_fund .metal, #alliance_fund .metal, #alliance_fund_trade .metal, #alliance_fund_donate .metal {
-  background: url('metal_48.png') no-repeat;
+  background: url('/images/template53/metal_48.png') no-repeat;
   width: 48px;
   height: 46px;
   display: block;
 }
 
 #mining td .crystal, #galaxy_fund .crystal, #alliance_fund .crystal, #alliance_fund_trade .crystal, #alliance_fund_donate .crystal {
-  background: url('crystal_48.png') no-repeat;
+  background: url('/images/template53/crystal_48.png') no-repeat;
   width: 48px;
   height: 43px;
   display: block;
 }
 
 #mining td .eonium, #galaxy_fund .eonium, #alliance_fund .eonium, #alliance_fund_trade .eonium, #alliance_fund_donate .eonium {
-  background: url('eonium_48.png') no-repeat;
+  background: url('/images/template53/eonium_48.png') no-repeat;
   width: 48px;
   height: 41px;
   display: block;
@@ -567,7 +567,7 @@ ul, li {
 .research_branch .completed .title {
   width: 100%;
   display: block;
-  background: url('tick.gif') no-repeat right;
+  background: url('/images/template53/tick.gif') no-repeat right;
 }
 
 #production_form table .resources li .textvalue, .training_info .resources li .textvalue {
@@ -660,19 +660,19 @@ ul, li {
 }
 
 .resources .metal .textvalue {
-  background: url('metal_16.png') no-repeat;
+  background: url('/images/template53/metal_16.png') no-repeat;
   width: 16px;
   height: 15px;
 }
 
 .resources .crystal .textvalue {
-  background: url('crystal_16.png') no-repeat;
+  background: url('/images/template53/crystal_16.png') no-repeat;
   width: 16px;
   height: 14px;
 }
 
 .resources .eonium .textvalue {
-  background: url('eonium_16.png') no-repeat;
+  background: url('/images/template53/eonium_16.png') no-repeat;
   width: 16px;
   height: 13px;
 }
@@ -695,12 +695,12 @@ ul, li {
 }
 
 .change_up {
-  background: url('up.png') no-repeat 1px;
+  background: url('/images/template53/up.png') no-repeat 1px;
   padding-left: 15px;
 }
 
 .change_down {
-  background: url('down.png') no-repeat 1px;
+  background: url('/images/template53/down.png') no-repeat 1px;
   padding-left: 15px;
 }
 
@@ -741,11 +741,11 @@ ul, li {
 #important_messages_contents_header {
   width: 750px;
   height: 12px;
-  background: url('center_top.png');
+  background: url('/images/template53/center_top.png');
 }
 
 #important_messages_contents_footer {
-  background: url('center_bottom.png');
+  background: url('/images/template53/center_bottom.png');
   width: 750px;
   height: 15px;
   margin-bottom: 25px;
@@ -798,7 +798,7 @@ a.questionmark {
 /*	Resource header	*/
 #header {
   float: right;
-  background: url('right-menu-top.png') no-repeat;
+  background: url('/images/template53/right-menu-top.png') no-repeat;
   width: 161px;
   padding-top: 26px;
 }
@@ -809,19 +809,19 @@ a.questionmark {
   height: 29px;
   font-weight: bold;
   text-align: center;
-  background: url('menu-right-middle.png');
+  background: url('/images/template53/menu-right-middle.png');
 }
 
 #header_mail {
   width: 161px;
   padding-top: 10px;
-  background: url('menu-right-middle.png');
+  background: url('/images/template53/menu-right-middle.png');
   text-indent: 5px;
 }
 
 #header_news {
   width: 161px;
-  background: url('menu-right-middle.png');
+  background: url('/images/template53/menu-right-middle.png');
   text-indent: 5px;
 }
 
@@ -831,7 +831,7 @@ a.questionmark {
 
 #header_tick, #header_metal, #header_crystal, #header_eonium, #header_value, #header_xp, #header_score, #header_rank, #header_asteroids {
   width: 161px;
-  background: url('menu-right-middle.png');
+  background: url('/images/template53/menu-right-middle.png');
   display: table;
 }
 
@@ -861,7 +861,7 @@ a.questionmark {
 }
 
 #planet_summary_construction, #planet_summary_research, #planet_summary_production {
-  background: url('menu-right-middle.png');
+  background: url('/images/template53/menu-right-middle.png');
   padding-left: 5px;
   padding-top: 10px;
 }
@@ -890,13 +890,13 @@ a.questionmark {
 
 #planet_summary_footer {
   width: 147px;
-  background: url('right-menu-bottom.png') bottom no-repeat;
+  background: url('/images/template53/right-menu-bottom.png') bottom no-repeat;
   padding-bottom: 26px;
   padding-right: 15px;
 }
 
 #quest_system .completed {
-  background: url('tick.gif') no-repeat;
+  background: url('/images/template53/tick.gif') no-repeat;
   width: 15px;
   height: 13px;
   display: block;
@@ -904,7 +904,7 @@ a.questionmark {
 }
 
 .expand {
-  background: url('expand.gif') no-repeat;
+  background: url('/images/template53/expand.gif') no-repeat;
   width: 13px;
   height: 12px;
   display: block;
@@ -945,12 +945,12 @@ a.questionmark {
 }
 
 .progress_bar {
-  background: url('progress_bar.jpg');
+  background: url('/images/template53/progress_bar.jpg');
   height: 18px;
 }
 
 .progress_expected {
-  background: url('progress_bar.jpg');
+  background: url('/images/template53/progress_bar.jpg');
   opacity: .50;
   filter: Alpha(opacity=50);
   -moz-opacity: 0.50;
@@ -967,7 +967,7 @@ a.questionmark {
 /*	Table	*/
 .container {
   width: 730px;
-  background: url('center_middle.png');
+  background: url('/images/template53/center_middle.png');
   padding: 10px;
 }
 
@@ -1141,7 +1141,7 @@ a.forum_title {
 }
 
 .forum_thread_actions_button {
-  background: url('../down_arrow.jpg') no-repeat;
+  background: url('/images/template53/../down_arrow.jpg') no-repeat;
   width: 17px;
   height: 15px;
   text-indent: -1000px;
@@ -1356,6 +1356,11 @@ a.forum_title {
 .relations_war {
   outline: #900000 1px solid;
   background: rgba(90, 00, 00, 0.2);
+}
+
+.relations_brokennap {
+  outline: #300000 1px solid;
+  background: rgba($color-broken, 0.2);
 }
 
 .relations_nap {
@@ -1590,7 +1595,7 @@ a.forum_title {
 }
 
 #info_loading {
-  background: url('loading.gif') center no-repeat;
+  background: url('/images/template53/loading.gif') center no-repeat;
   display: block;
   height: 33px;
 }
@@ -1624,7 +1629,7 @@ a.forum_title {
 }
 
 #tab_links {
-  background: url('center_middle.png');
+  background: url('/images/template53/center_middle.png');
   font-weight: bold;
   text-align: center;
   width: 730px;
@@ -1702,7 +1707,7 @@ a.forum_title {
   left: 50%;
   height: 32px;
   width: 32px;
-  background: url('loading.gif');
+  background: url('/images/template53/loading.gif');
   margin-top: -20px;
   margin-left: -20px;
   cursor: pointer;
@@ -1776,7 +1781,7 @@ a.forum_title {
   right: -15px;
   width: 30px;
   height: 30px;
-  background: url('close.png');
+  background: url('/images/template53/close.png');
   cursor: pointer;
   z-index: 1103;
   display: none;
