--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -100,7 +100,7 @@
 			  font-size: 0;
 
 			  &:after {
-				content: "BATTLE CALC";
+				content: "Battle Calc";
 				display: inline-block;
 				padding: .25rem .5rem;
 				color: $color-primary !important;
@@ -123,6 +123,7 @@
 				  padding: 0;
 				  border: 0;
 				}
+
 			  }
 
 			  &:hover {
@@ -133,6 +134,26 @@
 				  box-shadow: none;
 				}
 			  }
+			}
+
+			+ div > a.autocalc {
+			  display: inline-block;
+			  padding: .25rem .5rem;
+			  color: #32ab52 !important;
+			  background: rgba($color-secondary, .4) !important;
+			  border: 1px solid rgba(#32ab52, .5) !important;
+			  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+			  cursor: pointer;
+			  border-radius: 3px;
+			  text-transform: initial;
+			  font-weight: bold;
+			  font-family: inherit;
+			  font-size: $text-small;
+			  line-height: 1;
+			  white-space: nowrap;
+			  transition-property: color, background, box-shadow;
+			  transition-duration: .75s;
+			  transition-timing-function: linear;
 			}
 		  }
 
