--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -160,7 +160,9 @@ div[id^="page_universe_"] {
 		}
 
 		&.gc {
-		  color: #00e413;
+		  //color: #00e413;
+		  color: #ffffff;
+		  font-weight: bold;
 		}
 	  }
 
